--- a/add/index.haml
+++ b/add/index.haml
@@ -21,6 +21,7 @@
             %li Settings
       %section
         %form.addForm
+          %input(type="text" value="" id="#addTextBox")
           %input(type="button" value="Add Contact" id="addButton")
       %section#showContacts
         %div#output
