--- a/css/main.sass
+++ b/css/main.sass
@@ -57,6 +57,10 @@ section
     border-radius: 5px
     margin: auto
     clear: both
+  #addTextBox
+    position: relative
+    margin: .5em
+    margin: auto
 #output
   height: 50em
   text-align: center
