added newName and newNumber append on output. still no enter functionality

--- a/add/index.haml
+++ b/add/index.haml
@@ -21,7 +21,8 @@
             %li Settings
       %section
         %form.addForm
-          %input(type="text" value="" id="#addTextBox")
+          %input(type="text" id="addName")
+          %input(type="text" id="addNumber")
           %input(type="button" value="Add Contact" id="addButton")
       %section#showContacts
         %div#output
