--- a/add/index.haml
+++ b/add/index.haml
@@ -2,8 +2,10 @@
 %html
   %head
     %title Add Contacts
+    %link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     %link(type="text/css" rel="stylesheet" href="../css/main.css")
     %script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+    %script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
   %body
     %div.container
       %nav
@@ -20,10 +22,19 @@
           %a(href="#")
             %li Settings
       %section
-        %form.addForm
-          %input(type="text" id="addName")
-          %input(type="text" id="addNumber")
-          %input(type="button" value="Add Contact" id="addButton")
+        %input(type="button" id="addSign" data-toggle="modal" data-target="#myModal" value="+")
+        %div(id="myModal" class="modal fade" role="dialog")
+          %div.modal-dialog
+            %div.modal-content
+              %div.modal-header
+                %input(type="button" class="close" data-dismiss="modal" value="&times")
+                %h4.modal-title Add Contact
+              %div.modal-body
+                %input(type="text" id="addName")
+                %input(type="text" id="addNumber")
+                %input(type="button" id="clickToAdd" value="Submit" data-dismiss="modal")
+              %div.modal-footer
+                %input(type="button" class="btn btn-default" data-dismiss="modal" value="close")
       %section#showContacts
         %div#output
   %script(src="../js/js.js")
