--- a/index.haml
+++ b/index.haml
@@ -2,8 +2,10 @@
 %html
   %head
     %title Address Book
+    %link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     %link(type="text/css" rel="stylesheet" href="css/main.css")
     %script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+    %script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
   %body
     %div.container
       %nav
