--- a/add/index.haml
+++ b/add/index.haml
@@ -22,19 +22,20 @@
           %a(href="#")
             %li Settings
       %section
-        %input(type="button" id="addSign" data-toggle="modal" data-target="#myModal" value="+")
-        %div(id="myModal" class="modal fade" role="dialog")
-          %div.modal-dialog
-            %div.modal-content
-              %div.modal-header
-                %input(type="button" class="close" data-dismiss="modal" value="&times")
-                %h4.modal-title Add Contact
-              %div.modal-body
-                %input(type="text" id="addName")
-                %input(type="text" id="addNumber")
-                %input(type="button" id="clickToAdd" value="Submit" data-dismiss="modal")
-              %div.modal-footer
-                %input(type="button" class="btn btn-default" data-dismiss="modal" value="close")
-      %section#showContacts
-        %div#output
+        %div#addDiv
+          %input(type="button" id="addSign" data-toggle="modal" data-target="#myModal" value="+")
+          %div(id="myModal" class="modal fade" role="dialog")
+            %div.modal-dialog
+              %div.modal-content
+                %div.modal-header
+                  /%input(type="button" class="close" data-dismiss="modal" value="&times")
+                  %h4.modal-title Add Contact
+                %div.modal-body
+                  %input(type="text" id="addName" placeholder="Enter Name")
+                  %input(type="text" id="addNumber" placeholder="Enter Number")
+                %div.modal-footer
+                  %input(type="button" class="btn btn-default" id="clickToAdd" value="Create Contact" data-dismiss="modal")
+                  %input(type="button" class="btn btn-default" data-dismiss="modal" value="close")
+        %div#showContacts
+          %div#output
   %script(src="../js/js.js")
