--- a/css/main.sass
+++ b/css/main.sass
@@ -62,6 +62,25 @@ section
     margin: .5em
     margin: auto
 #output
-  height: 50em
-  text-align: center
-  font-size: 1.5em
+  margin-top: 3em
+#output
+  p
+    height: auto
+    text-align: left
+    font-size: 1em
+    margin-top: .5em
+    font-weight: normal
+.modal-footer
+  input
+    position: relative
+    display: inline-block !important
+#myModal
+  input
+    position: relative
+    margin: .5em
+    font-size: 1em
+    display: block
+#addSign
+  position: relative
+  left: 90%
+  margin-top: 2.5em
