--- a/add/index.haml
+++ b/add/index.haml
@@ -34,7 +34,7 @@
                   %input(type="text" id="addName" placeholder="Enter Name")
                   %input(type="text" id="addNumber" placeholder="Enter Number")
                 %div.modal-footer
-                  %input(type="button" class="btn btn-default" id="clickToAdd" value="Create Contact" data-dismiss="modal")
+                  %input(type="button" class="btn btn-default" id="clickToAdd" value="Create Contact")
                   %input(type="button" class="btn btn-default" data-dismiss="modal" value="close")
         %div#showContacts
           %div#output
