--- a/add/index.haml
+++ b/add/index.haml
@@ -32,7 +32,10 @@
                   %h4.modal-title Add Contact
                 %div.modal-body
                   %input(type="text" id="addName" placeholder="Enter Name")
-                  %input(type="text" id="addNumber" placeholder="Enter Number")
+                  %div.numberInputs
+                    %input(type="text" id="addNumber1" placeholder="XXX" size="3" maxlength="3")
+                    %input(type="text" id="addNumber2" placeholder="XXX" size="3" maxlength="3")
+                    %input(type="text" id="addNumber3" placeholder="XXXX" size="4" maxlength="4")
                 %div.modal-footer
                   %input(type="button" class="btn btn-default" id="clickToAdd" value="Create Contact")
                   %input(type="button" class="btn btn-default" data-dismiss="modal" value="close")
