added focus on addName

--- a/add/index.haml
+++ b/add/index.haml
@@ -38,7 +38,7 @@
                     %input(type="text" id="addNumber3" placeholder="XXXX" size="4" maxlength="4")
                 %div.modal-footer
                   %input(type="button" class="btn btn-default" id="clickToAdd" value="Create Contact")
-                  %input(type="button" class="btn btn-default" data-dismiss="modal" value="close")
+                  %input(type="button" class="btn btn-default" data-dismiss="modal" value="Close")
         %div#showContacts
           %div#output
   %script(src="../js/js.js")
