added href to home and contacts

--- a/add/index.haml
+++ b/add/index.haml
@@ -10,9 +10,9 @@
     %div.container
       %nav
         %ul
-          %a(href="#")
+          %a(href="../index.html")
             %li Home
-          %a(href="#")
+          %a(href="index.html")
             %li Add Contacts
         %ul
           %a(href="#")
