--- a/index.haml
+++ b/index.haml
@@ -11,7 +11,8 @@
       %nav
         %ul.navLeft
           %li Home
-          %li Add Contacts
+          %a(href="add/index.html")
+            %li Add Contacts
         %ul.navRight
           %li Log In
           %li Sign Up
@@ -20,6 +21,6 @@
         %p.mainTitle Your Address Book
         %p.mainDesc The place for people
       %section
-        %a(href="#")
+        %a(href="add/index.html")
           %p Go Now
-  %script(src="js/js.js)
+  %script(src="js/js.js")
