clears number inputs after submit

--- a/add/index.haml
+++ b/add/index.haml
@@ -41,4 +41,5 @@
                   %input(type="button" class="btn btn-default" data-dismiss="modal" value="Close")
         %div#showContacts
           %div#output
+            %p Test
   %script(src="../js/js.js")
