--- a/index.haml
+++ b/index.haml
@@ -10,17 +10,21 @@
     %div.container
       %nav
         %ul.navLeft
-          %li Home
+          %a(href="index.html")
+            %li Home
           %a(href="add/index.html")
             %li Add Contacts
         %ul.navRight
-          %li Log In
-          %li Sign Up
-          %li Settings
+          %a(href="#")
+            %li Log In
+          %a(href="#")
+            %li Sign Up
+          %a(href="#")
+            %li Settings
       %header
         %p.mainTitle Your Address Book
         %p.mainDesc The place for people
       %section
         %a(href="add/index.html")
-          %p Go Now
+          %p.go Go To Address Book
   %script(src="js/js.js")
