--- a/css/main.css
+++ b/css/main.css
@@ -4,33 +4,44 @@ body {
 nav {
   overflow: hidden; }
 
-nav ul:first-child li, nav ul:first-child a {
+nav ul:first-child {
   float: left;
-  font-size: 1em;
-  padding: 0.25em;
-  text-decoration: none;
-  list-style: none;
-  color: black; }
+  padding: 0; }
+  nav ul:first-child li {
+    float: left;
+    font-size: 1.15em;
+    padding: 0.4em;
+    text-decoration: none;
+    list-style: none;
+    color: black; }
 
-nav ul:last-child li, nav ul:last-child ul:first-child a, nav ul:first-child ul:last-child a {
-  float: right;
-  font-size: 1em;
-  padding: 0.25em;
-  text-decoration: none;
-  list-style: none;
-  color: black; }
+nav ul:last-child {
+  float: right; }
+  nav ul:last-child li {
+    float: right;
+    font-size: 1.15em;
+    padding: 0.25em;
+    text-decoration: none;
+    list-style: none;
+    color: black; }
+
+nav ul li:hover {
+  color: red;
+  font-size: 1.25em;
+  padding: 0.15em; }
 
 header {
-  clear: both; }
+  clear: both;
+  margin-top: 2.5em; }
   header .mainTitle {
     font-size: 2em;
     position: relative;
-    margin: auto;
+    text-align: center;
     font-weight: bold; }
   header .mainDesc {
     font-size: 1.25em;
     position: relative;
-    margin: auto;
+    text-align: center;
     font-weight: normal;
     margin-top: 0.5em; }
 
@@ -40,9 +51,15 @@ section a {
 section p {
   font-size: 2em;
   font-weight: bold;
-  color: black;
+  color: skyblue;
   position: relative;
-  margin: auto; }
+  margin-top: 2.5em;
+  text-align: center; }
+
+.go:hover {
+  font-size: 2.5em;
+  margin-top: 2em;
+  color: red; }
 
 .addForm #addButton {
   position: relative;
@@ -57,6 +74,15 @@ section p {
   margin: 0.5em;
   margin: auto; }
 
+#showContacts {
+  height: auto;
+  border: 1px solid black; }
+
+.showContactsTitle {
+  text-align: center;
+  color: skyblue;
+  text-decoration: underline; }
+
 #output {
   margin-top: 3em; }
 
@@ -65,7 +91,10 @@ section p {
   text-align: left;
   font-size: 1em;
   margin-top: 0.5em;
-  font-weight: normal; }
+  font-weight: normal;
+  color: black;
+  padding-left: 0.5em;
+  margin-bottom: 1em; }
 
 .modal-footer input {
   position: relative;
@@ -79,8 +108,10 @@ section p {
 
 #addSign {
   position: relative;
-  left: 90%;
-  margin-top: 2.5em; }
+  left: 1.5%;
+  margin-top: 0.5em;
+  background-color: transparent;
+  border-radius: 5px; }
 
 .numberInputs input {
   display: inline-block !important; }
