--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,9 @@ section p {
   background-color: transparent;
   border-radius: 5px; }
 
+#addSign:hover {
+  color: red; }
+
 .numberInputs input {
   display: inline-block !important; }
 
