--- a/css/main.sass
+++ b/css/main.sass
@@ -109,6 +109,8 @@ section
   margin-top: .5em
   background-color: transparent
   border-radius: 5px
+#addSign:hover
+  color: red
 .numberInputs
   input
     display: inline-block !important
